--- a/src/applications/enabled/traefik/values.yaml
+++ b/src/applications/enabled/traefik/values.yaml
@@ -51,13 +51,7 @@ traefik-forward-auth:
     COOKIE_DOMAIN: pastis-hosting.net
     DEFAULT_PROVIDER: oidc
     PROVIDERS_OIDC_ISSUER_URL: 'https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net'
-    PROVIDERS_OIDC_CLIENT_ID:
-      valueFrom:
-        secretKeyRef:
-          name: "{{ .Release.Name }}-secrets"
-          value: providers_oidc_client_id
-    PROVIDERS_OIDC_CLIENT_SECRET:
-      valueFrom:
-        secretKeyRef:
-          name: "{{ .Release.Name }}-secrets"
-          value: providers_oidc_client_secret
+  envFrom:
+    - secretRef:
+        name: "{{ .Release.Name }}-secrets"
+        
