--- a/src/applications/enabled/traefik/values.yaml
+++ b/src/applications/enabled/traefik/values.yaml
@@ -54,10 +54,10 @@ traefik-forward-auth:
     PROVIDERS_OIDC_CLIENT_ID:
       valueFrom:
         secretKeyRef:
-          name: "{{ .Release.Name }}-secrets"
+          name: "traefik-secrets"
           key: providers_oidc_client_id
     PROVIDERS_OIDC_CLIENT_SECRET:
       valueFrom:
         secretKeyRef:
-          name: "{{ .Release.Name }}-secrets"
+          name: "traefik-secrets"
           key: providers_oidc_client_secret
