--- a/src/applications/enabled/traefik/values.yaml
+++ b/src/applications/enabled/traefik/values.yaml
@@ -33,12 +33,14 @@ traefik:
   env:
     - name: CF_API_EMAIL
       valueFrom: 
-        name: "{{ .Release.Name }}-secrets"
-        key: cloudflare_api_email
+        secretKeyRef:
+          name: "{{ .Release.Name }}-secrets"
+          key: cloudflare_api_email
     - name: CF_DNS_API_TOKEN
       valueFrom:
-        name: "{{ .Release.Name }}-secrets"
-        key: cloudflare_dns_api_token
+        secretKeyRef:
+          name: "{{ .Release.Name }}-secrets"
+          key: cloudflare_dns_api_token
   ports:
     web:
       redirectTo: websecure
@@ -51,15 +53,18 @@ traefik-forward-auth:
     COOKIE_DOMAIN: pastis-hosting.net
     DEFAULT_PROVIDER: oidc
     PROVIDERS_OIDC_ISSUER_URL: https://keycloak.pastis-hosting.net/auth/realms/pastis-hosting.net
-    # PROVIDERS_OIDC_CLIENT_ID:
-    #   valueFrom:
-    #     name: "traefik-secrets"
-    #     key: providers_oidc_client_id
-    # PROVIDERS_OIDC_CLIENT_SECRET:
-    #   valueFrom:
-    #     name: "traefik-secrets"
-    #     key: providers_oidc_client_secret
+    PROVIDERS_OIDC_CLIENT_ID:
+      valueFrom:
+        secretKeyRef:
+          name: "traefik-secrets"
+          key: providers_oidc_client_id
+    PROVIDERS_OIDC_CLIENT_SECRET:
+      valueFrom:
+        secretKeyRef:
+          name: "traefik-secrets"
+          key: providers_oidc_client_secret
     SECRET:
       valueFrom:
-        name: "traefik-secrets"
-        key: secret
+        secretKeyRef:
+          name: "traefik-secrets"
+          key: secret
