--- a/src/applications/enabled/keycloak/values.yaml
+++ b/src/applications/enabled/keycloak/values.yaml
@@ -26,7 +26,7 @@ keycloak:
           path: "realms.json"
   proxyAddressForwarding: true
   auth: 
-    createAdminUser: false
+    createAdminUser: true
     existingSecret: "{{ .Release.Name }}-secrets"
   postgresql:
     persistence:
