homer: gcp & terraform

--- a/src/applications/enabled/homer/values.yaml
+++ b/src/applications/enabled/homer/values.yaml
@@ -89,6 +89,10 @@ homer:
                   icon: "fas fa-lock"
                   url: "https://dash.cloudflare.com/bb7602930482a97a4a403a52a17cb524/pastis-hosting.net"
                   target: "_blank"
+                - name: "GCP"
+                  icon: "fas fa-lock"
+                  url: "https://console.cloud.google.com/welcome?project=ph-prod-1"
+                  target: "_blank"
                 - name: "Keycloak"
                   icon: "fas fa-lock"
                   url: "https://keycloak.pastis-hosting.net/auth/admin/master/console"
@@ -97,9 +101,9 @@ homer:
                   icon: "fas fa-lock"
                   url: "https://app.mailjet.com/dashboard"
                   target: "_blank"
-                - name: "OVHcloud"
+                - name: "Terraform Cloud"
                   icon: "fas fa-lock"
-                  url: "https://www.ovh.com/manager/public-cloud/#/pci/projects/de9eaa1e9cc94734bf787165a68f4d01"
+                  url: "https://app.terraform.io/app/pastis-hosting/workspaces/ph"
                   target: "_blank"
                 - name: "Traefik"
                   icon: "fas fa-lock"
