--- a/src/applications/enabled/k10/values.yaml
+++ b/src/applications/enabled/k10/values.yaml
@@ -2,7 +2,8 @@
 k10:
   global:
     persistence:
-      enabled: false
+      enabled: true
+      storageClass: standard-rwo
   rbac:
     create: true
   scc:
