k10: gcp infrastructure profile

--- a/src/applications/enabled/k10-config/templates/policies/disaster-recovery.yaml
+++ b/src/applications/enabled/k10-config/templates/policies/disaster-recovery.yaml
@@ -16,7 +16,7 @@ spec:
     - action: backup
       backupParameters:
         profile:
-          name: {{ .Release.Name }}-icekubes-location-objectstore-de
+          name: {{ .Release.Name }}-gcp
           namespace: ph-k10
   selector:
     matchExpressions:
