--- a/src/applications/enabled/k10-config/templates/profiles/location/gcs.yaml
+++ b/src/applications/enabled/k10-config/templates/profiles/location/gcs.yaml
@@ -1,5 +1,6 @@
 apiVersion: config.kio.kasten.io/v1alpha1
 kind: Profile
+metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
   name: {{ .Release.Name }}-gcs
