--- a/src/applications/enabled/k10-config/templates/profiles/location/gcs.yaml
+++ b/src/applications/enabled/k10-config/templates/profiles/location/gcs.yaml
@@ -11,7 +11,7 @@ spec:
       secret:
         apiVersion: v1
         kind: secret
-        name: {{ .Release.Name }}-gcp
+        name: {{ .Release.Name }}-gcs
         namespace: ph-k10
       secretType: GcpServiceAccountKey
     objectStore:
