kasten: secret naming

--- a/src/applications/enabled/k10-config/templates/policies/disaster-recovery.yaml
+++ b/src/applications/enabled/k10-config/templates/policies/disaster-recovery.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
   namespace: ph-k10
-  name: "{{ .Release.Name }}-disaster-recovery-policy"
+  name: "{{ .Release.Name }}-disaster-recovery"
 spec:
   frequency: "@daily"
   retention:
