--- a/src/applications/enabled/k10-config/templates/policy/cluster-scoped-resources.yaml
+++ b/src/applications/enabled/k10-config/templates/policy/cluster-scoped-resources.yaml
@@ -1,5 +1,5 @@
-kind: Policy
 apiVersion: config.kio.kasten.io/v1alpha1
+kind: Policy
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
@@ -23,11 +23,11 @@ spec:
       backupParameters:
         filters: {}
         profile:
-          name: "{{ .Release.Name }}{{ .Values.profiles.location }}"
+          name: "{{ .Release.Name }}-{{ .Values.profiles.location.name }}"
           namespace: ph-k10
     - action: export
       exportParameters:
         frequency: "@daily"
         profile:
-          name: "{{ .Release.Name }}{{ .Values.profiles.location }}"
+          name: "{{ .Release.Name }}-{{ .Values.profiles.location.name }}"
           namespace: ph-k10
