--- a/src/applications/enabled/k10/values.yaml
+++ b/src/applications/enabled/k10/values.yaml
@@ -30,7 +30,7 @@ k10:
     host: k10.pastis-hosting.net
     tls:
       enabled: true
-      secretName: "{{ .Release.Name }}-ingress-secret"
+      secretName: k10-ingress
     annotations:
       external-dns.alpha.kubernetes.io/hostname: k10.pastis-hosting.net
       cert-manager.io/cluster-issuer: cert-manager-pastis-hosting-net-issuer
