--- a/src/applications/enabled/k10-config/templates/profile/location/gcs.yaml
+++ b/src/applications/enabled/k10-config/templates/profile/location/gcs.yaml
@@ -11,7 +11,7 @@ spec:
       secret:
         apiVersion: v1
         kind: secret
-        name: "{{ .Release.Name }}-gcs"
+        name: "{{ .Release.Name }}-gcp"
         namespace: {{ .Values.k10.namespace }}
       secretType: GcpServiceAccountKey
     objectStore:
