--- a/src/applications/enabled/k10-config/templates/profile/infra/gcp.yaml
+++ b/src/applications/enabled/k10-config/templates/profile/infra/gcp.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
   name: "{{ .Release.Name }}-gcp"
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.k10.namespace }}
 spec:
   infra:
     credential:
@@ -12,7 +12,7 @@ spec:
         apiVersion: v1
         kind: secret
         name: "{{ .Release.Name }}-gcp"
-        namespace: {{ .Release.Namespace }}
+        namespace: {{ .Values.k10.namespace }}
       secretType: GcpServiceAccountKey
     type: GCP
   type: Infra
