--- a/src/applications/enabled/k10-config/templates/secret/gcp.yaml
+++ b/src/applications/enabled/k10-config/templates/secret/gcp.yaml
@@ -12,4 +12,4 @@ spec:
   template:
     metadata:
       name: "{{ .Release.Name }}-gcp"
-      namespace: {{ .Release.Namespace }}
+      namespace: {{ .Values.k10.namespace }}
