--- a/src/applications/enabled/k10-config/templates/secret/oidc.yaml
+++ b/src/applications/enabled/k10-config/templates/secret/oidc.yaml
@@ -3,7 +3,7 @@ kind: SealedSecret
 metadata:
   labels:
 {{ include "helm.labels" . | indent 4 }}
-  name: k10-oidc-auth
+  name: "{{ .Release.Name }}-oidc"
   namespace: {{ .Values.k10.namespace }}
 spec:
   encryptedData:
