--- a/src/applications/enabled/k10-config/templates/profile/infra/gcp.yaml
+++ b/src/applications/enabled/k10-config/templates/profile/infra/gcp.yaml
@@ -7,12 +7,13 @@ metadata:
   namespace: {{ .Values.k10.namespace }}
 spec:
   infra:
+    type: GCP
     credential:
+      secretType: GcpServiceAccountKey
       secret:
         apiVersion: v1
         kind: Secret
         name: "{{ .Release.Name }}-gcp"
         namespace: {{ .Values.k10.namespace }}
       secretType: GcpServiceAccountKey
-    type: GCP
   type: Infra
