--- a/src/applications/enabled/homer/values.yaml
+++ b/src/applications/enabled/homer/values.yaml
@@ -89,10 +89,13 @@ homer:
                   icon: "fas fa-lock"
                   url: "https://dash.cloudflare.com/bb7602930482a97a4a403a52a17cb524/pastis-hosting.net"
                   target: "_blank"
-                - name: "GCP"
+                - name: "Google Cloud Console"
                   icon: "fas fa-lock"
                   url: "https://console.cloud.google.com/welcome?project=ph-prod-1"
                   target: "_blank"
+                - name: "K10"
+                  icon: "fas fa-lock"
+                  url: "https://k10.pastis-hosting.net/k10/"
                 - name: "Keycloak"
                   icon: "fas fa-lock"
                   url: "https://keycloak.pastis-hosting.net/auth/admin/master/console"
